# slint-python-template

./: .gitignore  LICENSE  Makefile  README.md  flatpak-manifest.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
assets/: app.desktop
src/: main.py
src/assets/: icon.icns
src/core/: system_info.py
src/ui/: main.slint
